--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    font: 14px/21px "Lucida Sans", "Lucida Grande", "Lucida Sans Unicode", sans-serif;
+    font: 14px/20px "Arial";
 }
 
 
